--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "starkpay-sdk",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "",
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/esm/dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -22,8 +23,6 @@
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "rollup": "^4.29.1",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
