--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,13 @@
     "jsx": "react",
     "module": "ESNext",
     "declaration": true,
-    "declarationDir": "../dist",
+    "declarationDir": "./dist",
     "sourceMap": true,
     "outDir": "dist",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "rootDir": "src"
   },
   "include": ["src"]
 }
